--- a/affiliate.html
+++ b/affiliate.html
@@ -285,11 +285,31 @@
 			<h3>Mobile searches on desktop has been blocked by MS, Use this website on your phone to automate your searches: <a href="https://tmtechnomania.github.io/Bing-Search-Automator-Mobile-Edition/" target="_blank" rel="noopener noreferrer">Automate Your Mobile Searches</a></h3>
             <p>v1.3.8 has been launched for everyone</p>
             <p>This update introduces a brand-new feature allowing you to toggle any tab between mobile and your regular desktop, enabling the use of a simulated mobile device for other websites. This functionality is especially useful for developers, providing a list of over 60+ different devices to choose from. It aids in debugging websites and testing mobile compatibility and responsiveness.</p>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 
             <h2>Still confused how to install and use the extension?</h2>
             <h3>Here is a step by step guide for you.</h3>
 			<iframe src="https://www.youtube.com/embed/5CU1gvnsaEg?si=88Gj0Cf5gxrLIuhc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			<iframe src="https://www.youtube.com/embed/We1iXIlTuMo?si=2x_140udMgv5X2u2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
             <div id="howto">
 				<!-- <div id="install"> -->
 					<h4>Installation and Setup:</h4>
@@ -308,6 +328,16 @@
 						<li>Locate the extension icon in your browser toolbar.</li>
 						<li>Click on the icon to open Rewards Search Automator.</li>
 					</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 					<h4>Performing Searches (Search Tab)</h4>
 					<strong><p>Step 1: Manual Entry</p></strong>
 					<ol>
@@ -322,6 +352,16 @@
 						<li>Specify the minimum and maximum delay (in seconds) between each search.</li>
 						<li>Click "Search" to perform searches.</li>
 					</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 
 					<h4>Scheduling Searches (Schedule Tab):</h4>
 					<strong><p>Step 1: Accessing the Schedule Tab</p></strong>
@@ -332,6 +372,16 @@
 						<li>Choose from four predefined schedules: Never, Startup, Every 5 Minutes, and Every 15 Minutes.</li>
 						<strong><p>NOTE: Understand that "Every 5 Minutes" includes a random delay of 5-7.5 minutes to prevent automation detection. Similarly, "Every 15 Minutes" includes a random delay of 15-20 minutes.</p></strong>
 					</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 					<h4>Footer Features:</h4>
 					<p>Important Links:</p>
 					<ol><li>Access important links in the footer for additional resources or support.</li></ol>
@@ -343,6 +393,16 @@
 						<li>View the allotted mobile device name.</li>
 						<li>Click on it to switch to another mobile device name.</li>
 					</ol>
+						<script type="text/javascript">
+							atOptions = {
+								'key' : 'e8105a7670134344bc98b1ea9766961c',
+								'format' : 'iframe',
+								'height' : 60,
+								'width' : 468,
+								'params' : {}
+							};
+							document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+						</script>
 				<!-- </div> -->
             </div>
             <h2>Facing issues in earning points?</h2>
