--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -212,7 +212,11 @@
 						alt="Kofi"
 						loading="lazy" />
 				</a>
-			</div>
+			</div><!-- rsa -->
+			<ins class="adsbygoogle"
+				 style="display:inline-block;width:728px;height:90px"
+				 data-ad-client="ca-pub-2108654491305511"
+				 data-ad-slot="8191899919"></ins>
 			<h2>
 				<a
 					href="https://chromewebstore.google.com/detail/eanofdhdfbcalhflpbdipkjjkoimeeod/reviews/my-review"
@@ -327,7 +331,11 @@
 				list of over 60+ different devices to choose from. It aids in
 				debugging websites and testing mobile compatibility and
 				responsiveness.
-			</p>
+			</p><!-- rsa -->
+			<ins class="adsbygoogle"
+				 style="display:inline-block;width:728px;height:90px"
+				 data-ad-client="ca-pub-2108654491305511"
+				 data-ad-slot="8191899919"></ins>
 			<h2>Still confused how to install and use the extension?</h2>
 			<h3>Here is a step by step guide for you.</h3>
 			<iframe
@@ -358,8 +366,11 @@
 				<ol>
 					<li>Locate the extension icon in your browser toolbar.</li>
 					<li>Click on the icon to open Rewards Search Automator.</li>
-				</ol>
-				</script>
+				</ol><!-- rsa -->
+				<ins class="adsbygoogle"
+					 style="display:inline-block;width:728px;height:90px"
+					 data-ad-client="ca-pub-2108654491305511"
+					 data-ad-slot="8191899919"></ins>
 				<h4>Performing Searches (Search Tab)</h4>
 				<strong><p>Step 1: Manual Entry</p></strong>
 				<ol>
@@ -374,7 +385,6 @@
 					</li>
 					<li>Click "Search" to perform searches.</li>
 				</ol>
-				</script>
 				<strong><p>Step 2: Predefined Search Buttons</p></strong>
 				<ol>
 					<li>
@@ -386,8 +396,11 @@
 						between each search.
 					</li>
 					<li>Click "Search" to perform searches.</li>
-				</ol>
-				</script>
+				</ol><!-- rsa -->
+				<ins class="adsbygoogle"
+					 style="display:inline-block;width:728px;height:90px"
+					 data-ad-client="ca-pub-2108654491305511"
+					 data-ad-slot="8191899919"></ins>
 				<h4>Scheduling Searches (Schedule Tab):</h4>
 				<strong><p>Step 1: Accessing the Schedule Tab</p></strong>
 				<ol>
@@ -415,9 +428,11 @@
 							random delay of 15-20 minutes.
 						</p></strong
 					>
-				</ol>
-				</script>
-
+				</ol><!-- rsa -->
+				<ins class="adsbygoogle"
+					 style="display:inline-block;width:728px;height:90px"
+					 data-ad-client="ca-pub-2108654491305511"
+					 data-ad-slot="8191899919"></ins>
 				<h4>Footer Features:</h4>
 				<p>Important Links:</p>
 				<ol>
@@ -444,8 +459,11 @@
 						Click on it to switch to another mobile device name.
 					</li>
 				</ol>
-				</script>
-
+				</script><!-- rsa -->
+				<ins class="adsbygoogle"
+					 style="display:inline-block;width:728px;height:90px"
+					 data-ad-client="ca-pub-2108654491305511"
+					 data-ad-slot="8191899919"></ins>
 				<!-- </div> -->
 			</div>
 			<h2>Facing issues in earning points?</h2>
@@ -507,7 +525,11 @@
 								</li>
 							</ul>
 						</li>
-					</ol>
+					</ol><!-- rsa -->
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:728px;height:90px"
+						 data-ad-client="ca-pub-2108654491305511"
+						 data-ad-slot="8191899919"></ins>
 				</details>
 				<details>
 					<summary>
@@ -534,7 +556,11 @@
 								</li>
 							</ul>
 						</li>
-					</ol>
+					</ol><!-- rsa -->
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:728px;height:90px"
+						 data-ad-client="ca-pub-2108654491305511"
+						 data-ad-slot="8191899919"></ins>
 				</details>
 				<details>
 					<summary>Points Not Collected on First Search</summary>
@@ -549,7 +575,11 @@
 								</li>
 							</ul>
 						</li>
-					</ol>
+					</ol><!-- rsa -->
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:728px;height:90px"
+						 data-ad-client="ca-pub-2108654491305511"
+						 data-ad-slot="8191899919"></ins>
 				</details>
 				<details>
 					<summary>Searches Are Not Performed</summary>
@@ -565,7 +595,11 @@
 							</ul>
 						</li>
 					</ol>
-				</details>
+				</details><!-- rsa -->
+				<ins class="adsbygoogle"
+					 style="display:inline-block;width:728px;height:90px"
+					 data-ad-client="ca-pub-2108654491305511"
+					 data-ad-slot="8191899919"></ins>
 				<details>
 					<summary>Schedule Not Working</summary>
 					<ol>
@@ -592,7 +626,11 @@
 								</li>
 							</ul>
 						</li>
-					</ol>
+					</ol><!-- rsa -->
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:728px;height:90px"
+						 data-ad-client="ca-pub-2108654491305511"
+						 data-ad-slot="8191899919"></ins>
 				</details>
 				<!-- </div> -->
 			</div>
@@ -609,6 +647,7 @@
 		</main>
 	</body>
 	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
 		const width = screen.width;
 		const scale = width / 1920;
 		console.log(scale);
