--- a/index.html
+++ b/index.html
@@ -594,12 +594,12 @@
 								</li>
 							</ul>
 						</li>
-					</ol>
-				</details><!-- rsa -->
-				<ins class="adsbygoogle"
-					 style="display:inline-block;width:728px;height:90px"
-					 data-ad-client="ca-pub-2108654491305511"
-					 data-ad-slot="8191899919"></ins>
+					</ol><!-- rsa -->
+					<ins class="adsbygoogle"
+						 style="display:inline-block;width:728px;height:90px"
+						 data-ad-client="ca-pub-2108654491305511"
+						 data-ad-slot="8191899919"></ins>
+				</details>
 				<details>
 					<summary>Schedule Not Working</summary>
 					<ol>
