--- a/affiliate.html
+++ b/affiliate.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -855,4 +855,5 @@
 		data-x_margin="18"
 		data-y_margin="18"></script>
 	<!-- <script async src="//www.instagram.com/embed.js"></script> -->
-</html>
+</html> -->
+<script>document.href = "tmtechnomania.github.io"</script>
