--- a/affiliate.html
+++ b/affiliate.html
@@ -13,6 +13,10 @@
 			src="https://code.jquery.com/jquery-3.7.1.min.js"
 			integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
 			crossorigin="anonymous"></script>
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
+			crossorigin="anonymous"></script>
 	</head>
 	<style>
 		* {
@@ -167,7 +171,7 @@
 		main iframe {
 			aspect-ratio: 16/9;
 			display: inline;
-			width: 49.5%;
+			width: 49%;
 		}
 		main div ol {
 			font-size: calc(20px * var(--scale));
@@ -209,18 +213,15 @@
 						loading="lazy" />
 				</a>
 			</div>
-			<script
-				async
-				src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-				crossorigin="anonymous"></script>
-			<!-- rsa -->
-			<ins
-				class="adsbygoogle"
-				style="display: inline-block; width: 728px; height: 90px"
-				data-ad-client="ca-pub-2108654491305511"
-				data-ad-slot="8191899919"></ins>
-			<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'e8105a7670134344bc98b1ea9766961c',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 			</script>
 			<h2>
 				<a
@@ -307,6 +308,16 @@
 						alt="Kofi"
 						loading="lazy" />
 				</a>
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+				</script>
 			</div>
 			<h2>
 				Announcements & Updates (v1.4.0):
@@ -317,6 +328,16 @@
 					>Automate Your Mobile Searches</a
 				>
 			</h2>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'e8105a7670134344bc98b1ea9766961c',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+			</script>
 			<h3>
 				Mobile searches on desktop has been blocked by MS, Use this
 				website on your phone to automate your searches:
@@ -327,20 +348,17 @@
 					>Automate Your Mobile Searches</a
 				>
 			</h3>
-			<script
-				async
-				src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-				crossorigin="anonymous"></script>
-			<!-- rsa -->
-			<ins
-				class="adsbygoogle"
-				style="display: inline-block; width: 728px; height: 90px"
-				data-ad-client="ca-pub-2108654491305511"
-				data-ad-slot="8191899919"></ins>
-			<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'e8105a7670134344bc98b1ea9766961c',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 			</script>
-			<p>v1.3.8 has been launched for everyone</p>
+			<p>v1.4.0 has been launched for everyone</p>
 			<p>
 				This update introduces a brand-new feature allowing you to
 				toggle any tab between mobile and your regular desktop, enabling
@@ -350,6 +368,16 @@
 				debugging websites and testing mobile compatibility and
 				responsiveness.
 			</p>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'e8105a7670134344bc98b1ea9766961c',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+			</script>
 			<h2>Still confused how to install and use the extension?</h2>
 			<h3>Here is a step by step guide for you.</h3>
 			<iframe
@@ -364,19 +392,16 @@
 				frameborder="0"
 				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 				allowfullscreen></iframe>
-			<script
-				async
-				src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-				crossorigin="anonymous"></script>
-			<!-- rsa -->
-			<ins
-				class="adsbygoogle"
-				style="display: inline-block; width: 728px; height: 90px"
-				data-ad-client="ca-pub-2108654491305511"
-				data-ad-slot="8191899919"></ins>
-			<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-			</script>
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+				</script>
 			<div id="howto">
 				<!-- <div id="install"> -->
 				<h4>Installation and Setup:</h4>
@@ -388,36 +413,30 @@
 						Click on "Add to Chrome" and confirm the installation.
 					</li>
 				</ol>
-				<script
-					async
-					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-					crossorigin="anonymous"></script>
-				<!-- rsa -->
-				<ins
-					class="adsbygoogle"
-					style="display: inline-block; width: 728px; height: 90px"
-					data-ad-client="ca-pub-2108654491305511"
-					data-ad-slot="8191899919"></ins>
-				<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 				</script>
 				<strong><p>Step 2: Accessing the Extension</p></strong>
 				<ol>
 					<li>Locate the extension icon in your browser toolbar.</li>
 					<li>Click on the icon to open Rewards Search Automator.</li>
 				</ol>
-				<script
-					async
-					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-					crossorigin="anonymous"></script>
-				<!-- rsa -->
-				<ins
-					class="adsbygoogle"
-					style="display: inline-block; width: 728px; height: 90px"
-					data-ad-client="ca-pub-2108654491305511"
-					data-ad-slot="8191899919"></ins>
-				<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 				</script>
 				<h4>Performing Searches (Search Tab)</h4>
 				<strong><p>Step 1: Manual Entry</p></strong>
@@ -433,18 +452,15 @@
 					</li>
 					<li>Click "Search" to perform searches.</li>
 				</ol>
-				<script
-					async
-					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-					crossorigin="anonymous"></script>
-				<!-- rsa -->
-				<ins
-					class="adsbygoogle"
-					style="display: inline-block; width: 728px; height: 90px"
-					data-ad-client="ca-pub-2108654491305511"
-					data-ad-slot="8191899919"></ins>
-				<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 				</script>
 				<strong><p>Step 2: Predefined Search Buttons</p></strong>
 				<ol>
@@ -458,18 +474,15 @@
 					</li>
 					<li>Click "Search" to perform searches.</li>
 				</ol>
-				<script
-					async
-					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-					crossorigin="anonymous"></script>
-				<!-- rsa -->
-				<ins
-					class="adsbygoogle"
-					style="display: inline-block; width: 728px; height: 90px"
-					data-ad-client="ca-pub-2108654491305511"
-					data-ad-slot="8191899919"></ins>
-				<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 				</script>
 				<h4>Scheduling Searches (Schedule Tab):</h4>
 				<strong><p>Step 1: Accessing the Schedule Tab</p></strong>
@@ -490,6 +503,16 @@
 						Choose from four predefined schedules: Never, Startup,
 						Every 5 Minutes, and Every 15 Minutes.
 					</li>
+					<script type="text/javascript">
+						atOptions = {
+							'key' : 'e8105a7670134344bc98b1ea9766961c',
+							'format' : 'iframe',
+							'height' : 60,
+							'width' : 468,
+							'params' : {}
+						};
+						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+					</script>
 					<strong
 						><p>
 							NOTE: Understand that "Every 5 Minutes" includes a
@@ -499,20 +522,16 @@
 						</p></strong
 					>
 				</ol>
-				<script
-					async
-					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-					crossorigin="anonymous"></script>
-				<!-- rsa -->
-				<ins
-					class="adsbygoogle"
-					style="display: inline-block; width: 728px; height: 90px"
-					data-ad-client="ca-pub-2108654491305511"
-					data-ad-slot="8191899919"></ins>
-				<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 				</script>
-
 				<h4>Footer Features:</h4>
 				<p>Important Links:</p>
 				<ol>
@@ -521,6 +540,16 @@
 						resources or support.
 					</li>
 				</ol>
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+				</script>
 				<p>Device Toggle Mode:</p>
 				<ol>
 					<li>
@@ -532,6 +561,16 @@
 						actual searches.
 					</li>
 				</ol>
+				<script type="text/javascript">
+					atOptions = {
+						'key' : 'e8105a7670134344bc98b1ea9766961c',
+						'format' : 'iframe',
+						'height' : 60,
+						'width' : 468,
+						'params' : {}
+					};
+					document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+				</script>
 				<p>Mobile Device Name:</p>
 				<ol>
 					<li>View the allotted mobile device name.</li>
@@ -539,26 +578,11 @@
 						Click on it to switch to another mobile device name.
 					</li>
 				</ol>
-				<script
-					async
-					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-					crossorigin="anonymous"></script>
-				<!-- rsa -->
-				<ins
-					class="adsbygoogle"
-					style="display: inline-block; width: 728px; height: 90px"
-					data-ad-client="ca-pub-2108654491305511"
-					data-ad-slot="8191899919"></ins>
-				<script>
-					(adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
-
 				<!-- </div> -->
 			</div>
 			<h2>Facing issues in earning points?</h2>
 			<h3>Here is a troubleshooting guide for you.</h3>
 			<div id="troubleshoot">
-				<!-- <div> -->
 				<details>
 					<summary>Points Not Collected After Searches</summary>
 					<ol>
@@ -615,22 +639,15 @@
 							</ul>
 						</li>
 					</ol>
-					<script
-						async
-						src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-						crossorigin="anonymous"></script>
-					<!-- rsa -->
-					<ins
-						class="adsbygoogle"
-						style="
-							display: inline-block;
-							width: 728px;
-							height: 90px;
-						"
-						data-ad-client="ca-pub-2108654491305511"
-						data-ad-slot="8191899919"></ins>
-					<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+					<script type="text/javascript">
+						atOptions = {
+							'key' : 'e8105a7670134344bc98b1ea9766961c',
+							'format' : 'iframe',
+							'height' : 60,
+							'width' : 468,
+							'params' : {}
+						};
+						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 					</script>
 				</details>
 				<details>
@@ -659,22 +676,15 @@
 							</ul>
 						</li>
 					</ol>
-					<script
-						async
-						src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-						crossorigin="anonymous"></script>
-					<!-- rsa -->
-					<ins
-						class="adsbygoogle"
-						style="
-							display: inline-block;
-							width: 728px;
-							height: 90px;
-						"
-						data-ad-client="ca-pub-2108654491305511"
-						data-ad-slot="8191899919"></ins>
-					<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+					<script type="text/javascript">
+						atOptions = {
+							'key' : 'e8105a7670134344bc98b1ea9766961c',
+							'format' : 'iframe',
+							'height' : 60,
+							'width' : 468,
+							'params' : {}
+						};
+						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 					</script>
 				</details>
 				<details>
@@ -691,22 +701,15 @@
 							</ul>
 						</li>
 					</ol>
-					<script
-						async
-						src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-						crossorigin="anonymous"></script>
-					<!-- rsa -->
-					<ins
-						class="adsbygoogle"
-						style="
-							display: inline-block;
-							width: 728px;
-							height: 90px;
-						"
-						data-ad-client="ca-pub-2108654491305511"
-						data-ad-slot="8191899919"></ins>
-					<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+					<script type="text/javascript">
+						atOptions = {
+							'key' : 'e8105a7670134344bc98b1ea9766961c',
+							'format' : 'iframe',
+							'height' : 60,
+							'width' : 468,
+							'params' : {}
+						};
+						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 					</script>
 				</details>
 				<details>
@@ -723,22 +726,15 @@
 							</ul>
 						</li>
 					</ol>
-					<script
-						async
-						src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-						crossorigin="anonymous"></script>
-					<!-- rsa -->
-					<ins
-						class="adsbygoogle"
-						style="
-							display: inline-block;
-							width: 728px;
-							height: 90px;
-						"
-						data-ad-client="ca-pub-2108654491305511"
-						data-ad-slot="8191899919"></ins>
-					<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+					<script type="text/javascript">
+						atOptions = {
+							'key' : 'e8105a7670134344bc98b1ea9766961c',
+							'format' : 'iframe',
+							'height' : 60,
+							'width' : 468,
+							'params' : {}
+						};
+						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 					</script>
 				</details>
 				<details>
@@ -768,24 +764,18 @@
 							</ul>
 						</li>
 					</ol>
-					<script
-						async
-						src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2108654491305511"
-						crossorigin="anonymous"></script>
-					<!-- rsa -->
-					<ins
-						class="adsbygoogle"
-						style="
-							display: inline-block;
-							width: 728px;
-							height: 90px;
-						"
-						data-ad-client="ca-pub-2108654491305511"
-						data-ad-slot="8191899919"></ins>
-					<script>
-						(adsbygoogle = window.adsbygoogle || []).push({});
+					<script type="text/javascript">
+						atOptions = {
+							'key' : 'e8105a7670134344bc98b1ea9766961c',
+							'format' : 'iframe',
+							'height' : 60,
+							'width' : 468,
+							'params' : {}
+						};
+						document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
 					</script>
 				</details>
+				<!-- <iframe src="https://livingshedhowever.com/up4jggte4?key=3ede97f5a0607f61f9f55f8c2e630f60" frameborder="0" id="ads"></iframe> -->
 				<!-- </div> -->
 			</div>
 			<h2>Still facing issues?</h2>
@@ -798,9 +788,20 @@
 					>@getprojectstech</a
 				>
 			</p>
+			<script type="text/javascript">
+				atOptions = {
+					'key' : 'e8105a7670134344bc98b1ea9766961c',
+					'format' : 'iframe',
+					'height' : 60,
+					'width' : 468,
+					'params' : {}
+				};
+				document.write('<scr' + 'ipt type="text/javascript" src="//livingshedhowever.com/e8105a7670134344bc98b1ea9766961c/invoke.js"></scr' + 'ipt>');
+			</script>
 		</main>
 	</body>
 	<script>
+		// (adsbygoogle = window.adsbygoogle || []).push({});
 		const width = screen.width;
 		const scale = width / 1920;
 		console.log(scale);
@@ -854,5 +855,4 @@
 		data-position="Right"
 		data-x_margin="18"
 		data-y_margin="18"></script>
-	<!-- <script async src="//www.instagram.com/embed.js"></script> -->
 </html>
